# serializer version: 1
# name: test_json_analyze_count_snapshot
  '''
  2
  
  '''
# ---
# name: test_json_analyze_portfolio_snapshot
  '''
  {
    "status": "ok",
    "result": {
      "portfolio": {
        "schema_version": 1,
        "scope": {
          "matched_session_count": 4,
          "analyzed_session_count": 4,
          "truncated": false,
          "dropped_session_count": 0
        },
        "session_count": {
          "count": 4,
          "evidence_refs": [
            {
              "session_id": "claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>"
            },
            {
              "session_id": "claude-code-session:3eb13b90-4668-4257-bdd6-<HASH>"
            },
            {
              "session_id": "chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>"
            },
            {
              "session_id": "chatgpt-export:8a476a87-e49d-481d-91d8-<HASH>"
            }
          ]
        },
        "origins": [
          {
            "origin": "chatgpt-export",
            "session_count": 2
          },
          {
            "origin": "claude-code-session",
            "session_count": 2
          }
        ],
        "repos_touched": [],
        "estimated_cost": {
          "total_cost_usd": 0.0,
          "cost_is_estimated": true,
          "tokens": {
            "input_tokens": 174,
            "output_tokens": 0,
            "cache_read_tokens": 0,
            "cache_write_tokens": 0
          },
          "evidence_refs": [
            {
              "session_id": "claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>"
            }
          ]
        },
        "cost_distribution": {
          "count": 0,
          "total": 0.0,
          "minimum": 0.0,
          "p50": 0.0,
          "p90": 0.0,
          "maximum": 0.0,
          "mean": 0.0
        },
        "wallclock_span": {
          "earliest_first_message_at": "<TIMESTAMP>",
          "latest_last_message_at": "<TIMESTAMP>",
          "span_ms": 80251994107,
          "summed_wall_duration_ms": <HASH>,
          "evidence_refs": [
            {
              "session_id": "chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>"
            }
          ]
        },
        "wallclock_distribution_s": {
          "count": 4,
          "total": 150690970.11,
          "minimum": 240.0,
          "p50": 360.0,
          "p90": 80251994.107,
          "maximum": 80251994.107,
          "mean": 37672742.5275
        },
        "pathologies": {
          "status": "clean",
          "count": 0,
          "detail": "detectors ran; no pathology found",
          "by_kind": {},
          "evidence_refs": []
        },
        "context_loss": {
          "status": "clean",
          "count": 0,
          "detail": "detectors ran; no pathology found",
          "by_kind": {},
          "evidence_refs": []
        },
        "top_pathologies": []
      }
    }
  }
  
  '''
# ---
# name: test_json_analyze_postmortem_snapshot
  '''
  {
    "status": "ok",
    "result": {
      "postmortem": {
        "schema_version": 2,
        "scope": {
          "matched_session_count": 4,
          "analyzed_session_count": 4,
          "truncated": false,
          "dropped_session_count": 0
        },
        "session_count": {
          "count": 4,
          "evidence_refs": [
            {
              "session_id": "claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>"
            },
            {
              "session_id": "claude-code-session:3eb13b90-4668-4257-bdd6-<HASH>"
            },
            {
              "session_id": "chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>"
            },
            {
              "session_id": "chatgpt-export:8a476a87-e49d-481d-91d8-<HASH>"
            }
          ]
        },
        "wallclock_span": {
          "earliest_first_message_at": "<TIMESTAMP>",
          "latest_last_message_at": "<TIMESTAMP>",
          "span_ms": 80251994107,
          "summed_wall_duration_ms": <HASH>,
          "evidence_refs": [
            {
              "session_id": "chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>"
            }
          ]
        },
        "estimated_cost": {
          "total_cost_usd": 0.0,
          "cost_is_estimated": true,
          "tokens": {
            "input_tokens": 174,
            "output_tokens": 0,
            "cache_read_tokens": 0,
            "cache_write_tokens": 0
          },
          "evidence_refs": [
            {
              "session_id": "claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>"
            }
          ]
        },
        "repos_touched": [],
        "top_expensive_session": {
          "status": "no_signal",
          "total_cost_usd": 0.0,
          "cost_is_estimated": false,
          "evidence_refs": [
            {
              "session_id": "claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>"
            }
          ],
          "reason": "no session in scope carries a positive cost figure"
        },
        "subagent_branch_count": {
          "count": 0,
          "evidence_refs": [
            {
              "session_id": "claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>"
            }
          ]
        },
        "longest_tool_gap": {
          "status": "unavailable",
          "reason": "per-tool-call timestamps are not present in the session profile or recovery digest; longest_tool_gap is not cheaply derivable in v0"
        },
        "wasted_loop": {
          "status": "clean",
          "count": 0,
          "detail": "detectors ran; no pathology found",
          "by_kind": {},
          "evidence_refs": []
        },
        "failure_mode": {
          "status": "clean",
          "count": 0,
          "detail": "detectors ran; no pathology found",
          "by_kind": {},
          "evidence_refs": []
        }
      }
    }
  }
  
  '''
# ---
# name: test_json_analyze_snapshot
  '''
  {
    "avg_messages_per_session": 5.0,
    "db_size_bytes": <SIZE_BYTES>,
    "embedded_messages": 0,
    "embedded_sessions": 0,
    "embedding_coverage_percent": 0.0,
    "embedding_dimensions": {},
    "embedding_models": {},
    "embedding_newest_at": null,
    "embedding_oldest_at": null,
    "embedding_readiness_status": "none",
    "material_origins": {
      "assistant_authored": 4,
      "human_authored": 6
    },
    "message_types": {
      "message": 10
    },
    "messages_missing_embedding_provenance": 0,
    "mode": "stats",
    "origin": null,
    "origin_count": 1,
    "origins": {
      "chatgpt-export": 2
    },
    "pending_embedding_sessions": 0,
    "query": null,
    "retrieval_ready": false,
    "role_counts": {
      "assistant": 4,
      "user": 6
    },
    "stale_embedding_messages": 0,
    "total_attachments": 0,
    "total_messages": 10,
    "total_sessions": 2
  }
  
  '''
# ---
# name: test_json_facets_snapshot
  '''
  {
    "scoped_to_query": false,
    "generated_at": "<TIMESTAMP>",
    "stale": false,
    "stale_age_s": null,
    "budget_exceeded": false,
    "complete_families": [
      "total_counts",
      "origins",
      "tags"
    ],
    "deferred_families": {
      "repos": "deferred_by_default",
      "role_counts": "deferred_by_default",
      "material_origins": "deferred_by_default",
      "message_types": "deferred_by_default",
      "action_types": "deferred_by_default",
      "has_flags": "deferred_by_default"
    },
    "family_errors": {},
    "family_status": {
      "total_counts": {
        "state": "complete",
        "reason": null,
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Total counts",
        "source": "session summaries",
        "canonicalization": "unique sessions plus stored message counts",
        "expensive": false
      },
      "origins": {
        "state": "complete",
        "reason": null,
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Provider origins",
        "source": "session summaries",
        "canonicalization": "provider/archive origin; not a repo or authoredness signal",
        "expensive": false
      },
      "tags": {
        "state": "complete",
        "reason": null,
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "User tags",
        "source": "session summaries",
        "canonicalization": "session tags de-duplicated within each session",
        "expensive": false
      },
      "repos": {
        "state": "deferred",
        "reason": "deferred_by_default",
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Canonical repositories",
        "source": "session_repos + repos",
        "canonicalization": "prefer repo_name or origin_url; omit archive/path tokens that are not product repo identities",
        "expensive": true
      },
      "role_counts": {
        "state": "deferred",
        "reason": "deferred_by_default",
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Provider-role counts",
        "source": "messages.role",
        "canonicalization": "provider-reported message role; not authoredness",
        "expensive": true
      },
      "material_origins": {
        "state": "deferred",
        "reason": "deferred_by_default",
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Material origins",
        "source": "messages.material_origin",
        "canonicalization": "authoredness/protocol provenance; separates human text from runtime or assistant material",
        "expensive": true
      },
      "message_types": {
        "state": "deferred",
        "reason": "deferred_by_default",
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Message content types",
        "source": "messages.message_type",
        "canonicalization": "normalized message content kind",
        "expensive": true
      },
      "action_types": {
        "state": "deferred",
        "reason": "deferred_by_default",
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Action types",
        "source": "actions.semantic_type",
        "canonicalization": "normalized semantic action kind",
        "expensive": true
      },
      "has_flags": {
        "state": "deferred",
        "reason": "deferred_by_default",
        "error": null,
        "stale": false,
        "stale_age_s": null,
        "label": "Content flags",
        "source": "messages.has_*",
        "canonicalization": "boolean message feature counters",
        "expensive": true
      }
    },
    "origins": {
      "chatgpt-export": 2
    },
    "tags": {},
    "repos": {},
    "cwd_prefixes": {},
    "role_counts": {},
    "message_types": {},
    "material_origins": {},
    "action_types": {},
    "has_flags": {},
    "omitted_facet_counts": {},
    "time_range": null,
    "total_sessions": 2,
    "total_messages": 10,
    "scoped": {
      "origins": {
        "chatgpt-export": 2
      },
      "tags": {},
      "repos": {},
      "role_counts": {},
      "message_types": {},
      "material_origins": {},
      "action_types": {},
      "has_flags": {},
      "omitted": {},
      "total_sessions": 2,
      "total_messages": 10
    },
    "global": {
      "origins": {
        "chatgpt-export": 2
      },
      "tags": {},
      "repos": {},
      "role_counts": {},
      "message_types": {},
      "material_origins": {},
      "action_types": {},
      "has_flags": {},
      "omitted": {},
      "total_sessions": 2,
      "total_messages": 10
    },
    "idf": {
      "origins": {
        "chatgpt-export": 0.0
      }
    }
  }
  
  '''
# ---
# name: test_json_read_all_snapshot
  '''
  {
    "items": [
      {
        "actions": {
          "annotate": {
            "enabled": true,
            "state": "enabled"
          },
          "copy_link": {
            "enabled": true,
            "state": "enabled"
          },
          "open": {
            "enabled": true,
            "state": "enabled"
          }
        },
        "anchor": "session-chatgpt-export-402913ec-9ef2-493e-b0ac-<HASH>",
        "created_at": "<TIMESTAMP>",
        "id": "chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>",
        "message_count": 5,
        "origin": "chatgpt-export",
        "tags": [],
        "target_ref": {
          "identity_key": "session:chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>",
          "session_id": "chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>",
          "target_id": "chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>",
          "target_type": "session"
        },
        "title": "corpus-01",
        "updated_at": "<TIMESTAMP>",
        "words": 90
      },
      {
        "actions": {
          "annotate": {
            "enabled": true,
            "state": "enabled"
          },
          "copy_link": {
            "enabled": true,
            "state": "enabled"
          },
          "open": {
            "enabled": true,
            "state": "enabled"
          }
        },
        "anchor": "session-chatgpt-export-8a476a87-e49d-481d-91d8-<HASH>",
        "created_at": "<TIMESTAMP>",
        "id": "chatgpt-export:8a476a87-e49d-481d-91d8-<HASH>",
        "message_count": 5,
        "origin": "chatgpt-export",
        "tags": [],
        "target_ref": {
          "identity_key": "session:chatgpt-export:8a476a87-e49d-481d-91d8-<HASH>",
          "session_id": "chatgpt-export:8a476a87-e49d-481d-91d8-<HASH>",
          "target_id": "chatgpt-export:8a476a87-e49d-481d-91d8-<HASH>",
          "target_type": "session"
        },
        "title": "corpus-00",
        "updated_at": "<TIMESTAMP>",
        "words": 164
      }
    ],
    "limit": 20,
    "mode": "list",
    "next_cursor": null,
    "next_offset": null,
    "offset": 0,
    "origin": null,
    "total": 2
  }
  
  '''
# ---
# name: test_json_status_snapshot
  '''
  {
    "daemon_liveness": false,
    "archive_root": "<PATH>",
    "active_archive_root": "<PATH>",
    "active_archive_root_matches_configured": true,
    "db_exists": true,
    "active_db_path": "<PATH>",
    "config_exists": false,
    "config_path": "<PATH>",
    "archive_tiers": {
      "source": {
        "path": "<PATH>",
        "exists": true,
        "size_bytes": <SIZE_BYTES>,
        "expected_user_version": 1,
        "user_version": 1,
        "version_status": "ok",
        "table_counts": {
          "raw_sessions": 2,
          "blob_refs": 2,
          "raw_artifacts": 0,
          "raw_hook_events": 0,
          "history_sidecars": 0
        }
      },
      "index": {
        "path": "<PATH>",
        "exists": true,
        "size_bytes": <SIZE_BYTES>,
        "expected_user_version": 10,
        "user_version": 10,
        "version_status": "ok",
        "table_counts": {
          "sessions": 2,
          "messages": 10,
          "blocks": 27,
          "session_profiles": 0,
          "session_work_events": 0,
          "session_phases": 0,
          "threads": 2,
          "thread_sessions": 2,
          "insight_materialization": 0
        }
      },
      "embeddings": {
        "path": "<PATH>",
        "exists": true,
        "size_bytes": <SIZE_BYTES>,
        "expected_user_version": 1,
        "user_version": 1,
        "version_status": "ok",
        "table_counts": {
          "embedding_status": 0
        }
      },
      "user": {
        "path": "<PATH>",
        "exists": true,
        "size_bytes": <SIZE_BYTES>,
        "expected_user_version": 3,
        "user_version": 3,
        "version_status": "ok",
        "table_counts": {
          "assertions": 0
        }
      },
      "ops": {
        "path": "<PATH>",
        "exists": true,
        "size_bytes": <SIZE_BYTES>,
        "expected_user_version": 1,
        "user_version": 1,
        "version_status": "ok",
        "table_counts": {
          "ingest_cursor": 0,
          "ingest_attempts": 0,
          "convergence_debt": 0,
          "cursor_lag_samples": 0,
          "daemon_stage_events": 0,
          "daemon_events": 0,
          "embedding_catchup_runs": 0,
          "otlp_spans": 0,
          "otlp_telemetry": 0
        }
      }
    },
    "archive_readiness": {
      "checked": false,
      "reason": "direct_status_default_skips_exact_archive_readiness",
      "surfaces": {}
    },
    "archive_facade_routes": {
      "checked": true,
      "source": "static_facade_route_catalog",
      "total_method_count": 126,
      "archive_ready_method_count": 125,
      "unsupported_method_count": 0,
      "route_counts": {
        "archive_routed": 111,
        "archive_direct": 14,
        "not_archive_runtime": 1
      },
      "tier_counts": {
        "user": 39,
        "index": 82,
        "none": 1,
        "source": 4
      },
      "unsupported_methods": [],
      "routes": {
        "add_mark": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "writes user marks through user.db"
        },
        "add_tag": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "writes user tags through user.db"
        },
        "archive_count_sessions": {
          "route": "archive_direct",
          "tier": "index",
          "detail": "current archive helper"
        },
        "archive_debt": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads unified archive debt rows from archive readiness surfaces"
        },
        "archive_get_session": {
          "route": "archive_direct",
          "tier": "index",
          "detail": "current archive helper"
        },
        "archive_list_sessions": {
          "route": "archive_direct",
          "tier": "index",
          "detail": "current archive helper"
        },
        "archive_search_sessions": {
          "route": "archive_direct",
          "tier": "index",
          "detail": "current archive helper"
        },
        "bulk_get_messages": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads messages from index.db"
        },
        "bulk_tag_sessions": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "writes user tags through user.db"
        },
        "clear_corrections": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "clears user corrections through user.db"
        },
        "close": {
          "route": "not_archive_runtime",
          "tier": "none",
          "detail": "resource lifecycle method"
        },
        "compile_context": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "compiles bounded context images from archive reads"
        },
        "context_pack_payload": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "builds context-pack DTOs from archive-routed reads"
        },
        "context_preamble_payload": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "builds context preamble DTOs from archive-routed reads"
        },
        "cost_outlook": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "uses archive-routed session cost insight reads"
        },
        "count_sessions": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "counts sessions from index.db"
        },
        "create_recall_pack": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "writes recall packs through user.db"
        },
        "delete_annotation": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "deletes annotations through user.db"
        },
        "delete_correction": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "deletes corrections through user.db"
        },
        "delete_metadata": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "deletes user metadata through user.db"
        },
        "delete_recall_pack": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "deletes recall packs through user.db"
        },
        "delete_session": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "delegates to archive-routed safe delete"
        },
        "delete_session_safe": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "deletes index rows while preserving user.db overlays"
        },
        "delete_view": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "deletes saved views through user.db"
        },
        "delete_workspace": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "deletes workspaces through user.db"
        },
        "diagnose_query_miss": {
          "route": "archive_direct",
          "tier": "index",
          "detail": "explains an empty index query result from index.db probes"
        },
        "explain_import": {
          "route": "archive_routed",
          "tier": "source",
          "detail": "explains source detection and import parsing without writing rows"
        },
        "explain_query_expression": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "explains query DSL parsing and lowering"
        },
        "export_insight_bundle": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "exports from insight tables when active"
        },
        "export_otel": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "projects bounded archive evidence into OTel-style payloads"
        },
        "facets": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "computes scoped/global facets from index.db"
        },
        "find_resume_candidates": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "uses archive-routed resume operations"
        },
        "find_stuck_session_latency_profile_insights": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads latency profiles from index.db"
        },
        "get_actions": {
          "route": "archive_direct",
          "tier": "index",
          "detail": "derives actions from index.db content blocks"
        },
        "get_actions_batch": {
          "route": "archive_direct",
          "tier": "index",
          "detail": "batch-derives actions from index.db content blocks"
        },
        "get_ancestors": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads session topology from index.db"
        },
        "get_annotation": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "reads annotations through user.db"
        },
        "get_descendants": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads session topology from index.db"
        },
        "get_index_status": {
          "route": "archive_direct",
          "tier": "index",
          "detail": "reads block-FTS existence and doc count from index.db"
        },
        "get_logical_session": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads session topology from index.db"
        },
        "get_messages_paginated": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads messages from index.db session envelopes"
        },
        "get_metadata": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "reads user metadata through user.db"
        },
        "get_raw_artifacts_for_session": {
          "route": "archive_routed",
          "tier": "source",
          "detail": "reads raw artifacts through source.db"
        },
        "get_recall_pack": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "reads recall packs through user.db"
        },
        "get_session": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads session envelopes from index.db"
        },
        "get_session_insight_status": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads insight readiness from index.db"
        },
        "get_session_latency_profile_insight": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads latency profiles from index.db"
        },
        "get_session_phase_insights": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads phases from index.db"
        },
        "get_session_profile_insight": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads profiles from index.db"
        },
        "get_session_profile_record": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads session profile record from index.db"
        },
        "get_session_stats": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads stats from index.db summaries"
        },
        "get_session_summary": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads summaries from index.db"
        },
        "get_session_topology": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads session topology from index.db"
        },
        "get_session_tree": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads session tree from index.db"
        },
        "get_session_work_event_insights": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads work events from index.db"
        },
        "get_sessions": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "delegates each read to the archive-routed session reader"
        },
        "get_siblings": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads session topology from index.db"
        },
        "get_stats_by": {
          "route": "archive_direct",
          "tier": "index",
          "detail": "groups session counts from index.db"
        },
        "get_thread": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads session topology from index.db"
        },
        "get_thread_insight": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads work threads from index.db"
        },
        "get_view": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "reads saved views through user.db"
        },
        "get_view_by_name": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "reads saved views through user.db"
        },
        "get_workspace": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "reads workspaces through user.db"
        },
        "health_check": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "returns archive tier/index readiness"
        },
        "insight_readiness_report": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads insight readiness from index.db"
        },
        "insight_rigor_audit": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads insight rigor from index.db"
        },
        "judge_assertion_candidate": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "writes candidate assertion judgments through user.db"
        },
        "list_annotations": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "reads annotations through user.db"
        },
        "list_archive_coverage_insights": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads coverage insights from index.db"
        },
        "list_archive_debt_insights": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads archive debt projection from index.db"
        },
        "list_assertion_candidate_reviews": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "reads candidate assertion review rows through user.db"
        },
        "list_assertion_candidates": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "reads candidate assertion claims through user.db"
        },
        "list_assertion_claim_payloads": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "reads assertion claim payload DTOs through user.db"
        },
        "list_assertion_claims": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "reads assertion claims through user.db"
        },
        "list_blackboard_notes": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "reads blackboard notes through user.db"
        },
        "list_corrections": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "reads corrections through user.db"
        },
        "list_cost_rollup_insights": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads cost rollups from index.db"
        },
        "list_marks": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "reads marks through user.db"
        },
        "list_read_view_profiles": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "lists executable read-view profiles"
        },
        "list_recall_packs": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "reads recall packs through user.db"
        },
        "list_session_cost_insights": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads session costs from index.db"
        },
        "list_session_latency_profile_insights": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads latency profiles from index.db"
        },
        "list_session_phase_insights": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads phases from index.db"
        },
        "list_session_profile_insights": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads profiles from index.db"
        },
        "list_session_tag_rollup_insights": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads tag rollups from index.db"
        },
        "list_session_work_event_insights": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads work events from index.db"
        },
        "list_sessions": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads full sessions from index.db"
        },
        "list_sessions_for_spec": {
          "route": "archive_direct",
          "tier": "index",
          "detail": "runs a query spec directly against index.db"
        },
        "list_summaries": {
          "route": "archive_direct",
          "tier": "index",
          "detail": "reads session summaries from index.db without hydration"
        },
        "list_tags": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "reads user tag counts through user.db"
        },
        "list_thread_insights": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads work threads from index.db"
        },
        "list_tool_usage_insights": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads tool usage insights from index.db"
        },
        "list_views": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "reads saved views through user.db"
        },
        "list_workspaces": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "reads workspaces through user.db"
        },
        "neighbor_candidate_payloads": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "builds neighbor DTOs from index.db"
        },
        "neighbor_candidates": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "discovers neighbors from index.db"
        },
        "parse_file": {
          "route": "archive_routed",
          "tier": "source",
          "detail": "writes source.db and index.db directly"
        },
        "parse_sources": {
          "route": "archive_routed",
          "tier": "source",
          "detail": "writes source.db and index.db directly"
        },
        "post_blackboard_note": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "writes blackboard notes through user.db"
        },
        "provider_usage_report": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "delegates to the provider usage report archive helper"
        },
        "query_completions": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "returns query DSL completions from index.db metadata"
        },
        "query_sessions": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "queries summaries from index.db"
        },
        "query_units": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "queries terminal archive units from index.db"
        },
        "rebuild_index": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "rebuilds messages_fts from index.db"
        },
        "rebuild_insights": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "rebuilds insight tables"
        },
        "record_correction": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "writes corrections through user.db"
        },
        "recovery_digest": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "builds recovery digests from archive-routed session reads"
        },
        "recovery_read_payload": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "renders recovery read DTOs from archive-routed session reads"
        },
        "recovery_report": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "renders recovery reports from archive-routed session reads"
        },
        "recovery_work_packet": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "renders recovery work packets from archive-routed session reads"
        },
        "remove_mark": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "writes user marks through user.db"
        },
        "remove_tag": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "writes user tags through user.db"
        },
        "resolve_ref": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "resolves public refs through bounded archive read payloads"
        },
        "resume_brief": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "builds resume briefs from archive-routed reads"
        },
        "save_annotation": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "writes annotations through user.db"
        },
        "save_view": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "writes saved views through user.db"
        },
        "save_workspace": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "writes workspaces through user.db"
        },
        "search": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "searches index.db block FTS"
        },
        "search_envelope": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "builds envelopes from index.db"
        },
        "search_session_hits": {
          "route": "archive_direct",
          "tier": "index",
          "detail": "projects FTS/hybrid search hits from index.db"
        },
        "session_correlation_payload": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "builds git/GitHub correlation DTOs from index.db sessions"
        },
        "set_metadata": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "writes user metadata through user.db"
        },
        "stats": {
          "route": "archive_routed",
          "tier": "index",
          "detail": "reads archive stats from index.db"
        },
        "storage_stats": {
          "route": "archive_direct",
          "tier": "index",
          "detail": "reads lightweight archive counts from index.db"
        },
        "update_index": {
          "route": "archive_direct",
          "tier": "index",
          "detail": "rebuilds the block-FTS index against index.db blocks"
        },
        "update_metadata": {
          "route": "archive_routed",
          "tier": "user",
          "detail": "delegates to archive-routed metadata writes"
        }
      }
    },
    "archive_cli_routes": {
      "checked": true,
      "source": "static_cli_route_catalog",
      "total_command_count": 5,
      "archive_ready_command_count": 5,
      "unsupported_command_count": 0,
      "route_counts": {
        "archive_direct": 5
      },
      "tier_counts": {
        "user": 3,
        "source": 2
      },
      "unsupported_commands": [],
      "routes": {
        "ops.state.blackboard.list": {
          "route": "archive_direct",
          "tier": "user",
          "detail": "reads blackboard notes through active-root user.db"
        },
        "ops.state.blackboard.post": {
          "route": "archive_direct",
          "tier": "user",
          "detail": "writes blackboard notes through active-root user.db"
        },
        "reset.database": {
          "route": "archive_direct",
          "tier": "source",
          "detail": "deletes active-root tier files and sidecars"
        },
        "reset.session": {
          "route": "archive_direct",
          "tier": "user",
          "detail": "writes suppressions to active-root user.db and deletes rebuildable active-root index rows"
        },
        "reset.source": {
          "route": "archive_direct",
          "tier": "source",
          "detail": "resolves source paths through active-root source.db/index.db and writes user-tier suppressions"
        }
      }
    },
    "archive_runtime_paths": {
      "checked": true,
      "source": "static_facade_route_catalog",
      "archive_routing_ready": true,
      "archive_runtime_ready": true,
      "primary_ingest_store": "archive_file_set",
      "ingest_write_mode": "archive",
      "archive_ingest_write_targets": [
        "source.db",
        "index.db"
      ],
      "archive_tier_targets": [
        "source.db",
        "index.db",
        "embeddings.db",
        "user.db",
        "ops.db"
      ],
      "facade_tier_route_counts": {
        "user": 39,
        "index": 82,
        "none": 1,
        "source": 4
      },
      "cli_tier_route_counts": {
        "user": 3,
        "source": 2
      },
      "index_rebuild_store": "index_db",
      "unsupported_primary_method_count": 0,
      "unsupported_primary_methods": [],
      "final_shape_blockers": []
    },
    "raw_materialization_readiness": {
      "available": true,
      "total": 0,
      "critical": 0,
      "warning": 0,
      "actionable": 0,
      "blocked": 0,
      "sampled_rows": []
    },
    "component_readiness": {
      "raw_materialization": {
        "component": "raw_materialization",
        "scope": "archive",
        "state": "ready",
        "summary": "ready",
        "last_success": null,
        "last_attempt": null,
        "counts": {
          "total": 0,
          "critical": 0,
          "warning": 0,
          "actionable": 0,
          "blocked": 0
        },
        "caveats": [],
        "repair_hint": null,
        "evidence_refs": []
      },
      "embeddings": {
        "component": "embeddings",
        "scope": "semantic",
        "state": "missing",
        "summary": "none",
        "last_success": null,
        "last_attempt": null,
        "counts": {
          "total_sessions": 2,
          "embedded_sessions": 0,
          "embedded_messages": 0,
          "pending_sessions": 2,
          "stale_messages": 0,
          "failure_count": 0,
          "retrieval_ready": false
        },
        "caveats": [],
        "repair_hint": "polylogue ops embed enable --voyage-api-key ...",
        "evidence_refs": []
      },
      "assertions": {
        "component": "assertions",
        "scope": "user",
        "state": "ready",
        "summary": "ready",
        "last_success": null,
        "last_attempt": null,
        "counts": {
          "assertion_count": 0,
          "target_count": 0,
          "active_count": 0
        },
        "caveats": [],
        "repair_hint": null,
        "evidence_refs": [
          "user.db:assertions"
        ],
        "metadata": {
          "overlay_audit": {
            "surfaces": [
              {
                "name": "marks",
                "storage": "assertions",
                "assertion_kind": "mark",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "highlights",
                "storage": "assertions",
                "assertion_kind": "highlight",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "annotations",
                "storage": "assertions",
                "assertion_kind": "annotation",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "suppressions",
                "storage": "assertions",
                "assertion_kind": "suppression",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "corrections",
                "storage": "assertions",
                "assertion_kind": "correction",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "tag_assertions",
                "storage": "assertions",
                "assertion_kind": "tag",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "metadata_assertions",
                "storage": "assertions",
                "assertion_kind": "metadata",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "saved_views",
                "storage": "assertions",
                "assertion_kind": "saved_query",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "recall_packs",
                "storage": "assertions",
                "assertion_kind": "recall_pack",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "workspaces",
                "storage": "assertions",
                "assertion_kind": "workspace_note",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "blackboard_notes",
                "storage": "assertions",
                "assertion_kind": "note",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "decisions",
                "storage": "assertions",
                "assertion_kind": "decision",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "caveats",
                "storage": "assertions",
                "assertion_kind": "caveat",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "lessons",
                "storage": "assertions",
                "assertion_kind": "lesson",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "blockers",
                "storage": "assertions",
                "assertion_kind": "blocker",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "handoffs",
                "storage": "assertions",
                "assertion_kind": "handoff",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "judgments",
                "storage": "assertions",
                "assertion_kind": "judgment",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "run_state",
                "storage": "assertions",
                "assertion_kind": "run_state",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "prompt_evals",
                "storage": "assertions",
                "assertion_kind": "prompt_eval",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "transform_candidates",
                "storage": "assertions",
                "assertion_kind": "transform_candidate",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              },
              {
                "name": "pathologies",
                "storage": "assertions",
                "assertion_kind": "pathology",
                "table": "assertions",
                "total_count": 0,
                "active_count": 0,
                "deleted_count": 0,
                "candidate_count": 0,
                "rationale": "assertion lifecycle claim"
              }
            ]
          }
        }
      },
      "transforms": {
        "component": "transforms",
        "scope": "recovery",
        "state": "blocked",
        "summary": "direct_status_default_skips_exact_archive_readiness",
        "last_success": null,
        "last_attempt": null,
        "counts": {
          "transform_count": 1,
          "recovery_transform_version": 1
        },
        "caveats": [
          "direct_status_default_skips_exact_archive_readiness"
        ],
        "repair_hint": null,
        "evidence_refs": [
          "transform_registry"
        ]
      }
    },
    "next_action": "polylogue init",
    "diagnostic": {
      "kind": "no_sources",
      "headline": "No configured chat sources.",
      "detail": "No `<PATH>` found. Run `polylogue init` to detect chat sources and write a starter config.",
      "next_action": "polylogue init"
    },
    "sessions": 2,
    "messages": 10,
    "raw_records": 2
  }
  
  '''
# ---
# name: test_markdown_analyze_portfolio_snapshot
  '''
  # Portfolio Report
  
  - **Scope:** archive-start → now
  - **Sessions:** 4 analyzed / 4 matched
  - **Origins:** chatgpt-export (2), claude-code-session (2)
  - **Total cost:** $0.00 _(estimated)_
  - **Tokens:** in 174, out 0, cache-read 0, cache-write 0
  
  ## Distributions
  
  - Cost per session (USD): no signal
  - Wall time per session: n=4 total=1.50691e+<DURATION> min=240 p50=360 p90=8.0252e+07 max=8.0252e+07 mean=3.76727e+07
  
  ## Failure-mode pathologies
  
  - **Overall:** clean — detectors ran; no pathology found
  - **Context loss:** clean — detectors ran; no pathology found
  
  
  '''
# ---
# name: test_markdown_analyze_postmortem_snapshot
  '''
  # Postmortem Bundle
  
  ## Scope
  - Matched sessions: 4
  - Analyzed sessions: 4
  - Since: (unbounded)
  - Until: (unbounded)
  - Query: (none)
  
  ## Headline
  
  | Field | Value |
  | --- | --- |
  | session_count | 4 |
  | wallclock_span | span_ms=80251994107, summed_wall_ms=<HASH> |
  | estimated_cost_usd | $0.000000 (estimated) |
  | token_lanes | input=174, output=0, cache_read=0, cache_write=0 |
  | top_expensive_session | no_signal: no session in scope carries a positive cost figure |
  | repos_touched | (none) |
  | subagent_branch_count | 0 |
  | longest_tool_gap | unavailable (per-tool-call timestamps are not present in the session profile or recovery digest; longest_tool_gap is not cheaply derivable in v0) |
  | wasted_loop | clean (no pathology found) |
  | failure_mode | clean (no pathology found) |
  
  ## Evidence
  
  | Field | Evidence refs |
  | --- | --- |
  | session_count | claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>, claude-code-session:3eb13b90-4668-4257-bdd6-<HASH>, chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>, chatgpt-export:8a476a87-e49d-481d-91d8-<HASH> |
  | wallclock_span | chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH> |
  | estimated_cost | claude-code-session:e6b3c944-cb32-4e35-b922-<HASH> |
  | top_expensive_session | claude-code-session:e6b3c944-cb32-4e35-b922-<HASH> |
  | subagent_branch_count | claude-code-session:e6b3c944-cb32-4e35-b922-<HASH> |
  
  
  '''
# ---
# name: test_plain_analyze_count_snapshot
  '''
  2
  
  '''
# ---
# name: test_plain_analyze_portfolio_snapshot
  '''
  Polylogue Portfolio Report
  scope: archive-start → now
  sessions: analyzed=4 matched=4
  origins: chatgpt-export=2, claude-code-session=2
  total_cost: $0.00 (estimated)
  tokens: in=174 out=0 cache_read=0 cache_write=0
  cost_per_session_usd: no signal
  wall_per_session_s: n=4 total=1.50691e+<DURATION> min=240 p50=360 p90=8.0252e+07 max=8.0252e+07 mean=3.76727e+07
  wallclock_span_ms: 80251994107
  pathologies: clean (detectors ran; no pathology found)
  context_loss: clean (detectors ran; no pathology found)
  
  '''
# ---
# name: test_plain_analyze_postmortem_snapshot
  '''
  Postmortem bundle
    scope: matched=4, analyzed=4
    sessions: 4
    wallclock: span_ms=80251994107 summed_wall_ms=<HASH> (<TIMESTAMP> -> <TIMESTAMP>)
    cost: $0.000000 (estimated)
      tokens: input=174 output=0 cache_read=0 cache_write=0
    top_expensive_session: no_signal (no session in scope carries a positive cost figure)
    repos_touched: (none)
    subagent_branch_count: 0
    longest_tool_gap: unavailable (per-tool-call timestamps are not present in the session profile or recovery digest; longest_tool_gap is not cheaply derivable in v0)
    wasted_loop: clean (no pathology found)
    failure_mode: clean (no pathology found)
    evidence:
      session_count: claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>, claude-code-session:3eb13b90-4668-4257-bdd6-<HASH>, chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>, chatgpt-export:8a476a87-e49d-481d-91d8-<HASH>
      wallclock_span: chatgpt-export:402913ec-9ef2-493e-b0ac-<HASH>
      estimated_cost: claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>
      top_expensive_session: claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>
      subagent_branch_count: claude-code-session:e6b3c944-cb32-4e35-b922-<HASH>
  
  '''
# ---
# name: test_plain_analyze_snapshot
  '''
  Sessions: 2
  Messages: 10
  Attachments: 0
  Origins: 1
  Average messages: 5.0
  
  '''
# ---
# name: test_plain_read_all_origin_filter_snapshot
  '''
  chatgpt-export:402913ec-  <TIMESTAMP>  chatgpt-export            corpus-01 (5 msgs)
  chatgpt-export:8a476a87-  <TIMESTAMP>  chatgpt-export            corpus-00 (5 msgs)
  
  '''
# ---
# name: test_plain_read_all_snapshot
  '''
  chatgpt-export:402913ec-  <TIMESTAMP>  chatgpt-export            corpus-01 (5 msgs)
  chatgpt-export:8a476a87-  <TIMESTAMP>  chatgpt-export            corpus-00 (5 msgs)
  
  '''
# ---
